Update article index.html for static deployment

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <section class="author-section">
             <div class="author-card">
                 <div class="author-avatar">
-                    <img src="https://ui-avatars.com/api/?name=Михаил+Киселев&amp;size=120&amp;background=4f46e5&amp;color=fff&amp;bold=true" alt="Михаил Киселев" onerror="this.src='https://ui-avatars.com/api/?name=Михаил+Киселев&size=120&background=4f46e5&color=fff&bold=true'">
+                    <img src="https://ui-avatars.com/api/?name=Александр+Виноградов&amp;size=120&amp;background=4f46e5&amp;color=fff&amp;bold=true" alt="Александр Виноградов" onerror="this.src='https://ui-avatars.com/api/?name=Александр+Виноградов&size=120&background=4f46e5&color=fff&bold=true'">
                 </div>
                 <div class="author-info">
-                    <h2 class="author-name">Михаил Киселев</h2>
-                    <p class="author-description">Александр Петров — эксперт в области альтернативной энергетики с более чем 10-летним опытом работы в сфере разработки и анализа энергетических решений. Он является автором нескольких исследований о портативных источниках энергии и активно консультирует компании по вопросам выбора и применения электростанций для различных нужд. Его последняя статья, посвященная лучшим портативным электростанциям, основана на реальных отзывах пользователей и направлена на помощь потребителям в выборе оптимальных решений для кемпинга, путешествий и домашнего использования.</p>
+                    <h2 class="author-name">Александр Виноградов</h2>
+                    <p class="author-description">Эксперт в области энергетических технологий и устойчивого развития, обладающий более чем 10-летним опытом работы в сфере разработки и оценки портативных энергетических решений. Специализируется на анализе потребительских устройств, уделяя особое внимание их функциональности и надежности в реальных условиях. Автор множества статей и обзоров, включая исследования портативных электростанций, где представлен широкий спектр моделей, адаптированных под различные потребности пользователей.</p>
                     <div class="author-badges">
                         <span class="badge expert">Эксперт</span>
                     </div>
@@ -43,32 +43,53 @@
             </div>
         </article>
 
-        <!-- Table Section (Placeholder) -->
+        <!-- Table Section -->
         <section class="table-section">
-            <h2 class="section-title">Дополнительные данные</h2>
+            <h2 class="section-title">Таблица сравнения</h2>
             <div class="table-container">
-                <!-- Таблица будет добавлена здесь при необходимости -->
-                <div class="table-placeholder">
-                    <p>Таблица данных будет размещена здесь</p>
-                </div>
+                <table border="1" cellspacing="0" cellpadding="5">
+    <thead>
+        <tr>
+            <th>Модель</th>
+            <th>Мощность (кВт)</th>
+            <th>Емкость (Вт·ч)</th>
+            <th>Средняя оценка</th>
+            <th>Средняя цена (руб.)</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>FUBAG AS 2400i</td>
+            <td>1.2</td>
+            <td>Не указана</td>
+            <td>4.7</td>
+            <td>49 990</td>
+        </tr>
+        <tr>
+            <td>SBAOH 300 Вт</td>
+            <td>0.3</td>
+            <td>296</td>
+            <td>4.6</td>
+            <td>22 990</td>
+        </tr>
+        <tr>
+            <td>BLUETTI AC70P</td>
+            <td>Не указана</td>
+            <td>864</td>
+            <td>Не указана</td>
+            <td>Не указана</td>
+        </tr>
+    </tbody>
+</table>
             </div>
         </section>
 
-        <!-- Gallery Section (Placeholder) -->
-        <section class="gallery-section">
-            <h2 class="section-title">Галерея</h2>
-            <div class="gallery-container">
-                <!-- Галерея изображений будет добавлена здесь при необходимости -->
-                <div class="gallery-placeholder">
-                    <p>Галерея изображений будет размещена здесь</p>
-                </div>
-            </div>
-        </section>
+        
 
         <!-- Footer -->
         <footer class="article-footer">
             <div class="footer-content">
-                <p>&copy; 2025 Михаил Киселев. Все права защищены.</p>
+                <p>&copy; 2025 Александр Виноградов. Все права защищены.</p>
                 <p class="footer-note">Экспертное мнение</p>
             </div>
         </footer>
